Adding SEO to HTML

--- a/about.html
+++ b/about.html
@@ -71,13 +71,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow-rounded" />
+          <img
+            src="images/yoga.png"
+            title="picture of a woman in a purple room doing a yoga pose"
+            class="img-fluid p-2 shadow-rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow-rounded" />
+          <img
+            src="images/weather.png"
+            title="picture of weather page for the city of Lisbon"
+            class="img-fluid p-2 shadow-rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow-rounded" />
+          <img
+            src="images/yogurt.png"
+            title="picture of greek yogurt with blueberries"
+            class="img-fluid p-2 shadow-rounded"
+          />
         </div>
       </div>
     </div>
