--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-    <img src="images/yoga.png" class="img-fluid rounded" />
+    <img src="images/yoga.png" title="picture of a woman in a purple room doing a yoga pose" class="img-fluid rounded" />
         </div>
         <div class="col-lg-6">
           <h2 class="mb-3"> Yoga app </h2>
@@ -76,12 +76,12 @@
         </div>
           </div> 
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded">
+          <img src="images/weather.png" title="picture of weather page for the city of Lisbon" class="img-fluid rounded">
         </div>
           </div>
         <div class="row mt-5">
           <div class="col-6">
-            <img src="images/yogurt.png" class="img-fluid rounded">
+            <img src="images/yogurt.png" title="picture of greek yogurt with blueberries" class="img-fluid rounded">
           </div>
           <div class="col-lg-6">
             <h2 class="mb-3"> Yogurt App </h2>
