Update SEO for about.html

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Learning about the Dulce Muro's background."
+      content="Learning about the Dulce's background."
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link
@@ -95,7 +95,7 @@
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:dulce.muro91@gmail.com" class="email-link">
+      <a href="mailto:dulce.muro91@gmail.com" title="email address" class="email-link">
         dulce.muro91@gmail.com
       </a>
     </div>
